# veloren_plugin_template

./: Cargo.toml  README.md  plugin.toml
src/: lib.rs
