[package]
name = "veloren_plugin_template"
version = "0.1.0"
authors = ["ccgauche <gaucheron.laurent@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
veloren-plugin-rt = { git = "https://gitlab.com/veloren/veloren/", branch="ccgauche/plugin-retreive", package = "veloren-plugin-rt"}